src/test/deca/codegen/invalid/homemade/classMethodWithoutReturn_nocheck.res
ERROR : exited method P.move with non-void return type without a return instruction.
